Fix background on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,7 +28,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: -10;
-    background: url('../images/Gfycat.gif') no-repeat center center;
+    background: linear-gradient(rgba(33, 43, 52, 0.72), rgba(61, 80, 97, 0.6)) fixed, url('../images/Gfycat.gif') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -150,7 +150,7 @@ nav a:hover, nav a.active {
     width: 100%;
     height: 100%;
     z-index: -10;
-    background: url('../images/GifImage.gif') no-repeat center center;
+    background: linear-gradient(rgba(33, 43, 52, 0.72), rgba(61, 80, 97, 0.6)) fixed, url('../images/GifImage.gif') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
